# reacher

./: .env.example  .gitignore  README.md  chatgpt-pro-scaffold.md  drizzle.config.ts  package.json  pnpm-lock.yaml
apps/reddit-devvit/: README.md  devvit.json  package-lock.json  package.json  tsconfig.json
apps/runner/: pyproject.toml
apps/runner/reacher_runner/: code_mode.py  config.py  db.py  gemini.py  main.py  usage.py
apps/runner/reacher_runner/agents/: outreach_prepare_agent.py  research_agent.py
apps/runner/reacher_runner/artifacts/: writer.py
apps/runner/reacher_runner/browserbase/: driver.py  research.py  yc.py
apps/runner/reacher_runner/exports/: markdown.py
apps/runner/reacher_runner/github/: __init__.py  research.py
apps/runner/reacher_runner/reddit/: __init__.py  research.py
apps/runner/reacher_runner/runs/: executor.py
apps/runner/reacher_runner/skills/: loader.py
apps/runner/skills/discord/: message_prepare.md  page_cues.md  research.md
apps/runner/skills/github/: research.md
apps/runner/skills/global/: outreach_prepare.md  research.md
apps/runner/skills/linkedin/: message_prepare.md  page_cues.md  research.md
apps/runner/skills/reddit/: message_prepare.md  page_cues.md  research.md
apps/runner/skills/x/: dm_prepare.md  message_prepare.md  page_cues.md  research.md
apps/runner/tests/: test_config.py  test_runner_agents.py  test_runner_db.py  test_skill_loader.py
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
plans/browser-agent-workbench/: agent-runner-plan.md  (+12 more)
scripts/: browserbase-login-sessions.mjs
(+72 files in other folders)
